// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Skeleton /> should render the circular skeleton 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 64px;
  height: 64px;
  background: #F5F5FA;
  -webkit-animation: placeholderShimmer 1s linear infinite;
  animation: placeholderShimmer 1s linear infinite;
  border-radius: 50%;
}

<div>
  <div
    class="c0"
    height="64"
    type="circular"
    width="64"
  />
</div>
`;

exports[`<Skeleton /> should render the rectangular skeleton 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 400px;
  height: 200px;
  background: #F5F5FA;
  -webkit-animation: placeholderShimmer 1s linear infinite;
  animation: placeholderShimmer 1s linear infinite;
}

<div>
  <div
    class="c0"
    height="200"
    type="rectangular"
    width="400"
  />
</div>
`;

exports[`<Skeleton /> should render the text skeleton 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 61px;
  height: px;
  background: #F5F5FA;
  -webkit-animation: placeholderShimmer 1s linear infinite;
  animation: placeholderShimmer 1s linear infinite;
  height: 24px;
}

<div>
  <div
    class="c0"
    type="text"
    width="61"
  />
</div>
`;
